--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "TylerBot",
+  "name": "tyler-bot",
   "version": "1.0.0",
   "private": true,
   "homepage": "https://tyler-losinski.github.io/Tyler-Bot/build",
